// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Production Build SSR > 'CSS import in script' 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-css-import-[hash].css"
>
<div>
  <h2>
    CSS Import Page
  </h2>
</div>
`;

exports[`Production Build SSR > 'CSS modules' 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-css-module-[hash].css"
>
<div class="_container_[css-module-hash]">
  CSS Module
</div>
`;

exports[`Production Build SSR > 'CSS with style src alias' 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-css-src-alias-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Alias Styled Page
  </h1>
  <vue-island entry="/assets/AliasStyledCounter-[hash].js">
    <button data-v-[scoped]>
      Alias Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'CSS with style src' 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-css-src-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    External Styled Page
  </h1>
  <vue-island entry="/assets/ExternalStyledCounter-[hash].js">
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Component in subdirectory' 1`] = `
<div>
  Subdirectory Page
</div>
`;

exports[`Production Build SSR > 'Component with CSS' 1`] = `
<link
  rel="stylesheet"
  href="/assets/StyledCounter-[hash].css"
>
<link
  rel="stylesheet"
  href="/assets/with-css-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Styled Page
  </h1>
  <vue-island entry="/assets/StyledCounter-[hash].js">
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Component with island' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island entry="/assets/Counter-[hash].js">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Component with props' 1`] = `
<div>
  Hello Props
</div>
`;

exports[`Production Build SSR > 'Dynamic import shared CSS' 1`] = `
<link
  rel="stylesheet"
  href="/assets/StyledCounter-[hash].css"
>
<link
  rel="stylesheet"
  href="/assets/with-dynamic-shared-css-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Dynamic Shared Styled Page
  </h1>
  <vue-island entry="/assets/DynamicImport-[hash].js">
    <!--[-->
    <h2>
      Async Component
    </h2>
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Full HTML document with head/body' 1`] = `
<html>
  <head>
    <title>
      Test Document
    </title>
    <script
      type="module"
      src="/assets/custom-element-[hash].js"
      async
    >
    </script>
  </head>
  <body>
    <h1>
      Document
    </h1>
    <vue-island entry="/assets/Counter-[hash].js">
      <button>
        Count: 0
      </button>
    </vue-island>
  </body>
</html>
`;

exports[`Production Build SSR > 'Island with alias import' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island entry="/assets/Counter-[hash].js">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Island with barrel import' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island
    entry="/assets/barrel-[hash].js"
    imported-name="Counter"
  >
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Island with named import' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island
    entry="/assets/named-import-[hash].js"
    imported-name="Counter"
  >
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Island with options API renamed compo…' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Options API Renamed Page
  </h1>
  <vue-island entry="/assets/OptionsCounter-[hash].js">
    <button>
      Options Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Island with options API' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Options API Page
  </h1>
  <vue-island entry="/assets/OptionsCounter-[hash].js">
    <button>
      Options Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Island with props' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island
    entry="/assets/Counter-[hash].js"
    props="{&quot;count&quot;:42,&quot;label&quot;:&quot;Click me&quot;}"
  >
    <button label="Click me">
      Count: 42
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Multiple islands on the same page' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island entry="/assets/CounterA-[hash].js">
    <button>
      Counter A
    </button>
  </vue-island>
  <vue-island entry="/assets/CounterB-[hash].js">
    <button>
      Counter B
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Named export' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<!--[-->
<div>
  island
</div>
<div>
  server
</div>
<vue-island entry="/assets/NamedExportIsland-[hash].js">
  <div>
    Named Export Island
  </div>
</vue-island>
<div>
  Named Export Server
</div>
`;

exports[`Production Build SSR > 'Nested island' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island entry="/assets/Outer-[hash].js">
    <div class="outer">
      <span>
        Outer
      </span>
      <span class="inner">
        Inner
      </span>
    </div>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Non-ascii file name' 1`] = `
<p>
  Non-ascii file name
</p>
`;

exports[`Production Build SSR > 'SVG image asset' 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-svg-img-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div class="wrapper">
  <h1>
    SVG Image
  </h1>
  <img
    src="/assets/icon-[hash].svg"
    alt="icon"
  >
  <vue-island entry="/assets/Counter-[hash].js">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Same component as island and server' 1`] = `
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <vue-island
    entry="/assets/Counter-[hash].js"
    props="{&quot;count&quot;:1}"
  >
    <button>
      Count: 1
    </button>
  </vue-island>
  <button>
    Count: 2
  </button>
</div>
`;

exports[`Production Build SSR > 'Server component with slot' 1`] = `
<div class="layout">
  <header>
    Header
  </header>
  <main>
    <!--[-->
    <p>
      Page content
    </p>
  </main>
  <footer>
    Footer
  </footer>
</div>
`;

exports[`Production Build SSR > 'Shared CSS common chunk' 1`] = `
<link
  rel="stylesheet"
  href="/assets/StyledCounter-[hash].css"
>
<link
  rel="stylesheet"
  href="/assets/with-shared-css-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Shared Styled Page
  </h1>
  <vue-island entry="/assets/StyledCounter-[hash].js">
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR > 'Static component rendering' 1`] = `
<div>
  Hello World
</div>
`;

exports[`Production Build SSR > Build output files 1`] = `
[
  "assets/AliasStyledCounter-[hash].js",
  "assets/Counter-[hash].js",
  "assets/CounterA-[hash].js",
  "assets/CounterB-[hash].js",
  "assets/DynamicImport-[hash].js",
  "assets/ExternalStyledCounter-[hash].js",
  "assets/Inner-[hash].js",
  "assets/NamedExportIsland-[hash].js",
  "assets/OptionsCounter-[hash].js",
  "assets/Outer-[hash].js",
  "assets/StyledCounter-[hash].css",
  "assets/StyledCounter-[hash].js",
  "assets/_plugin-vue_export-helper-[hash].js",
  "assets/barrel-[hash].js",
  "assets/custom-element-[hash].js",
  "assets/icon-[hash].svg",
  "assets/named-import-[hash].js",
  "assets/preload-helper-[hash].js",
  "assets/vue.runtime.esm-bundler-[hash].js",
  "assets/with-css-[hash].css",
  "assets/with-css-import-[hash].css",
  "assets/with-css-module-[hash].css",
  "assets/with-css-src-[hash].css",
  "assets/with-css-src-alias-[hash].css",
  "assets/with-dynamic-shared-css-[hash].css",
  "assets/with-shared-css-[hash].css",
  "assets/with-svg-img-[hash].css",
]
`;

exports[`Production Build SSR > Build output files 2`] = `
{
  "base": "/",
  "cssMap": {
    "pages/document.vue": [],
    "pages/named-export.vue": [],
    "pages/nested/index.vue": [],
    "pages/non-ascii-テスト.vue": [],
    "pages/static.vue": [],
    "pages/with-barrel-import.vue": [],
    "pages/with-css-import.vue": [
      "assets/with-css-import-[hash].css",
    ],
    "pages/with-css-module.vue": [
      "assets/with-css-module-[hash].css",
    ],
    "pages/with-css-src-alias.vue": [
      "assets/with-css-src-alias-[hash].css",
    ],
    "pages/with-css-src.vue": [
      "assets/with-css-src-[hash].css",
    ],
    "pages/with-css.vue": [
      "assets/StyledCounter-[hash].css",
      "assets/with-css-[hash].css",
    ],
    "pages/with-dynamic-shared-css.vue": [
      "assets/StyledCounter-[hash].css",
      "assets/with-dynamic-shared-css-[hash].css",
    ],
    "pages/with-idle-island.vue": [],
    "pages/with-island-alias.vue": [],
    "pages/with-island-props.vue": [],
    "pages/with-island.vue": [],
    "pages/with-media-island.vue": [],
    "pages/with-mount-variation.vue": [],
    "pages/with-multiple-islands.vue": [],
    "pages/with-named-import.vue": [],
    "pages/with-nested-island.vue": [],
    "pages/with-options-api-renamed.vue": [],
    "pages/with-options-api.vue": [],
    "pages/with-props.vue": [],
    "pages/with-shared-css.vue": [
      "assets/StyledCounter-[hash].css",
      "assets/with-shared-css-[hash].css",
    ],
    "pages/with-slot.vue": [],
    "pages/with-svg-img.vue": [
      "assets/with-svg-img-[hash].css",
    ],
    "pages/with-visible-island.vue": [],
  },
  "entryDir": "pages",
  "islandsBootstrap": "assets/custom-element-[hash].js",
  "jsMap": {
    "components/AliasStyledCounter.vue": "assets/AliasStyledCounter-[hash].js",
    "components/Counter.vue": "assets/Counter-[hash].js",
    "components/CounterA.vue": "assets/CounterA-[hash].js",
    "components/CounterB.vue": "assets/CounterB-[hash].js",
    "components/DynamicImport.vue": "assets/DynamicImport-[hash].js",
    "components/ExternalStyledCounter.vue": "assets/ExternalStyledCounter-[hash].js",
    "components/Inner.vue": "assets/Inner-[hash].js",
    "components/NamedExportIsland.vue": "assets/NamedExportIsland-[hash].js",
    "components/OptionsCounter.vue": "assets/OptionsCounter-[hash].js",
    "components/Outer.vue": "assets/Outer-[hash].js",
    "components/StyledCounter.vue": "assets/StyledCounter-[hash].js",
    "components/barrel.ts": "assets/barrel-[hash].js",
    "components/named-import.ts": "assets/named-import-[hash].js",
  },
}
`;

exports[`Production Build SSR > Type definition file is generated in project root 1`] = `
"/* eslint-disable */
// oxlint-disable
// Generated by Visle. !! DO NOT MODIFY THIS FILE !!
// Make sure to add this file to your tsconfig.json file as an "include" or "files" entry.

declare module 'visle' {
  import type { ComponentProps } from 'visle'

  interface VisleEntries {
    'with-visible-island': ComponentProps<typeof import('./pages/with-visible-island.vue')['default']>
    'with-svg-img': ComponentProps<typeof import('./pages/with-svg-img.vue')['default']>
    'with-slot': ComponentProps<typeof import('./pages/with-slot.vue')['default']>
    'with-shared-css': ComponentProps<typeof import('./pages/with-shared-css.vue')['default']>
    'with-props': ComponentProps<typeof import('./pages/with-props.vue')['default']>
    'with-options-api': ComponentProps<typeof import('./pages/with-options-api.vue')['default']>
    'with-options-api-renamed': ComponentProps<typeof import('./pages/with-options-api-renamed.vue')['default']>
    'with-nested-island': ComponentProps<typeof import('./pages/with-nested-island.vue')['default']>
    'with-named-import': ComponentProps<typeof import('./pages/with-named-import.vue')['default']>
    'with-multiple-islands': ComponentProps<typeof import('./pages/with-multiple-islands.vue')['default']>
    'with-mount-variation': ComponentProps<typeof import('./pages/with-mount-variation.vue')['default']>
    'with-media-island': ComponentProps<typeof import('./pages/with-media-island.vue')['default']>
    'with-island': ComponentProps<typeof import('./pages/with-island.vue')['default']>
    'with-island-props': ComponentProps<typeof import('./pages/with-island-props.vue')['default']>
    'with-island-alias': ComponentProps<typeof import('./pages/with-island-alias.vue')['default']>
    'with-idle-island': ComponentProps<typeof import('./pages/with-idle-island.vue')['default']>
    'with-dynamic-shared-css': ComponentProps<typeof import('./pages/with-dynamic-shared-css.vue')['default']>
    'with-css': ComponentProps<typeof import('./pages/with-css.vue')['default']>
    'with-css-src': ComponentProps<typeof import('./pages/with-css-src.vue')['default']>
    'with-css-src-alias': ComponentProps<typeof import('./pages/with-css-src-alias.vue')['default']>
    'with-css-module': ComponentProps<typeof import('./pages/with-css-module.vue')['default']>
    'with-css-import': ComponentProps<typeof import('./pages/with-css-import.vue')['default']>
    'with-barrel-import': ComponentProps<typeof import('./pages/with-barrel-import.vue')['default']>
    'static': ComponentProps<typeof import('./pages/static.vue')['default']>
    'non-ascii-テスト': ComponentProps<typeof import('./pages/non-ascii-テスト.vue')['default']>
    'named-export': ComponentProps<typeof import('./pages/named-export.vue')['default']>
    'document': ComponentProps<typeof import('./pages/document.vue')['default']>
    'nested/index': ComponentProps<typeof import('./pages/nested/index.vue')['default']>
  }
}
export {}
"
`;

exports[`Production Build SSR with manual chunks > dynamic import shared CSS page includes the merged CSS 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-visible-island-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Dynamic Shared Styled Page
  </h1>
  <vue-island entry="/assets/DynamicImport-[hash].js">
    <!--[-->
    <h2>
      Async Component
    </h2>
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Production Build SSR with manual chunks > shared CSS page includes the merged CSS 1`] = `
<link
  rel="stylesheet"
  href="/assets/with-visible-island-[hash].css"
>
<script
  type="module"
  src="/assets/custom-element-[hash].js"
  async
>
</script>
<div>
  <h1>
    Shared Styled Page
  </h1>
  <vue-island entry="/assets/StyledCounter-[hash].js">
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;
